# Intro_To_RAG

./: .gitignore  10K_REPORTS_SUMMARY.md  CLASSIFICATION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LANGSMITH_SETUP.md  README.md  classified_articles.csv  classified_articles.json  demo.py  docker-compose.yml  edgar_10k_scraper.py  edgar_10k_scraper_improved.py  extract_10k_content.py  extract_10k_direct.py  financial_data_extraction.csv  financial_data_extraction.json  headlines.md  high_confidence_articles.json  langgraph_rag.py  main.py  pyproject.toml  qa_demo.py  qa_system.py  quick_commit.sh  requirements.txt  ruff.toml  sample_classification_results.json  setup_qa.py  simple_example.py  simple_tool_demo.py  test_classification_output.csv  test_classification_output.json  test_classification_output_summary.txt  test_headlines.md  test_headlines_year.py  test_memory.py  test_self_query.py  test_year_filtering.py
assets/diagrams/: detailed.md  (+2 more)
docs/: 03_rag_pt2_architecture.md
extracted_10k_content/: Apple_2023_10K_full_content.txt  Apple_2023_10K_preview.txt  Apple_2024_10K_full_content.txt  Apple_2024_10K_preview.txt  Microsoft_2024_10K_full_content.txt  Microsoft_2025_10K_full_content.txt  Microsoft_2025_10K_preview.txt  Tesla_2024_10K_full_content.txt  Tesla_2024_10K_preview.txt  Tesla_2025_10K_full_content.txt  Tesla_2025_10K_preview.txt
langchain_rag/: 01_semantic_search_engine.py  02_rag_pt1.py  03_rag_pt2.py  04_classification.py  04_classification_advanced.py  05_extraction.py  __main__.py
utils/: config_loader.py  secrets_loader.py
