[project]
name = "intro-to-rag"
version = "0.1.0"
description = "RAG system for PE Stack Headlines with Qdrant vector database"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.2",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]
